
- Add syntax support for deep effect handlers
  (Leo White, Tom Kelly, Anil Madhavapeddy, KC Sivaramakrishnan, Xavier Leroy
   and Florian Angeletti, review by the same, Hugo Heuzard, and Ulysse Gérard)

* #13275 : Introduce a new type `(module M : S) -> t[M]` that corresponds to
  module-dependent functions (aka modular explicits).
  (Samuel Vivien review by Leo White, ...)

### Type system

- #11891, #12507: Allow to name new locally abstract types in constructor type
  annotations.
  (Jacques Garrigue, report and review by Gabriel Scherer and Florian Angeletti)

### Runtime system:

- #13272: Allow maximum number of domains to be specified as a OCAMLRUNPARAM
  parameter.
  (KC Sivaramakrishnan, review by Guillaume Munch-Maccagnoni, Miod Vallat,
   Gabriel Scherer, David Allsopp, request by Zachary Yedidia).

- #11911, #12923: Multicore statistical memory profiling.
  This restores a notable OCaml 4 feature that was missing
  in OCaml 5.
  (Nick Barnes, review by Stephen Dolan, Jacques-Henri Jourdan
   and Guillaume Munch-Maccagnoni).

- #12579: OS-based Synchronisation for Stop-the-World Sections
  (B. Szilvasy, review by Miod Vallat, Nick Barnes, Olivier Nicole,
   Gabriel Scherer and Damien Doligez)

- #12789: Restore caml_unregister_frametable from OCaml 4
  (Frédéric Recoules, review by Gabriel Scherer)

- #13003: new, more consistent names for array-creation C functions
  (Gabriel Scherer, review by Olivier Nicole)

- #13013: introduce a `caml_result` type to supersede the
  use of 'encoded exception values' in the FFI.
  (Gabriel Scherer, review by Damien Doligez,
   Guillaume Munch-Maccagnoni and Xavier Leroy,
   suggested by Guillaume Munch-Maccagnoni)

- #12407, #13226: Resource-handling improvements: add
  exception-returning variants for all exception-raising functions in
  `caml/fail.h`, for the purpose of cleaning-up state and resources
  before raising.
  (Guillaume Munch-Maccagnoni, review by Damien Doligez, Xavier Leroy
   and Gabriel Scherer)
