@@ -404,8 +404,10 @@ module With_shorthand = struct
           "%a@ :@ %t"
           Printtyp.path p
           (pp_orig dmodtype mty)
-    | Newtype ->
-        Fmt.dprintf "(type)"
+    | Newtype (Some p) ->
+        Fmt.dprintf "(type %a)" Printtyp.path p
+    | Newtype None ->
+        Fmt.dprintf "(type ?)"
     | Anonymous ->
         let short_mty = modtype { ua with item = mty } in
         begin match short_mty with
@@ -420,7 +422,10 @@ module With_shorthand = struct
     | Unit -> Fmt.dprintf "()"
     | Empty_struct -> Fmt.dprintf "(struct end)"
     | Named p -> fun ppf -> Printtyp.path ppf p
-    | Newtype -> Fmt.dprintf "(type)"
+    | Newtype (Some p) ->
+        Fmt.dprintf "(type %a)" Printtyp.path p
+    | Newtype None ->
+        Fmt.dprintf "(type ?)"
     | Anonymous ->
         let short_mty = modtype { ua with item=mty } in
         pp dmodtype short_mty
@@ -429,7 +434,6 @@ end
 
 
 module Functor_suberror = struct
-  open Err
 
   let param_id x = match x.With_shorthand.item with
     | Types.Named (Some _ as x,_) -> x
@@ -508,10 +512,13 @@ module Functor_suberror = struct
       let incompatible = function
         | Types.Unit ->
             Fmt.dprintf
-              "The functor was expected to be applicative at this position"
-        | Types.Named _ | Types.Newtype _ ->
-            Fmt.dprintf
               "The functor was expected to be generative at this position"
+        | Types.Named _ ->
+            Fmt.dprintf
+              "The functor was expected to be applicative at this position"
+        | Types.Newtype _ ->
+            Fmt.dprintf
+              "The functor expected a type argument at this position"
 
       let patch env got expected =
         Includemod.Functor_inclusion_diff.diff env got expected
@@ -577,17 +584,7 @@ module Functor_suberror = struct
         (dmodtype mty) e (more ())
 
 
-    let incompatible = function
-      | Unit ->
-          Fmt.dprintf
-            "The functor was expected to be applicative at this position"
-      | Named _ | Anonymous | Newtype ->
-          Fmt.dprintf
-            "The functor was expected to be generative at this position"
-      | Empty_struct ->
-          (* an empty structure can be used in both applicative and generative
-             context *)
-          assert false
+    let incompatible = Inclusion.incompatible
   end
 
   let subcase sub ~expansion_token env (pos, diff) =
@@ -884,8 +881,8 @@ and functor_arg_diff ~expansion_token env (patch: _ Diffing.change) =
   | Insert mty -> Functor_suberror.Inclusion.insert mty
   | Delete mty -> Functor_suberror.Inclusion.delete mty
   | Keep (x, y, _) ->  Functor_suberror.Inclusion.ok x y
-  | Change (_, _, Err.Incompatible_params (i,_)) ->
-      Functor_suberror.Inclusion.incompatible i
+  | Change (_, _, Err.Incompatible_params (_i,p)) ->
+      Functor_suberror.Inclusion.incompatible p
   | Change (g, e,  Err.Mismatch mty_diff) ->
       let more () =
         subcase_list @@
@@ -899,8 +896,8 @@ let functor_app_diff ~expansion_token env  (patch: _ Diffing.change) =
   | Insert mty ->  Functor_suberror.App.insert mty
   | Delete mty ->  Functor_suberror.App.delete mty
   | Keep (x, y, _) ->  Functor_suberror.App.ok x y
-  | Change (_, _, Err.Incompatible_params (i,_)) ->
-      Functor_suberror.App.incompatible i
+  | Change (_, _, Err.Incompatible_params (_i,p)) ->
+      Functor_suberror.App.incompatible p
   | Change (g, e,  Err.Mismatch mty_diff) ->
       let more () =
         subcase_list @@
@@ -957,14 +954,18 @@ let report_error err =
     ~footnote:Printtyp.Conflicts.err_msg
    "%a" err_msgs err
 
+let report_type_expected_error ~loc arity path =
+  Location.errorf ~loc "The type constructor %a expects %d argument(s)"
+      Printtyp.type_path path arity
+
 let report_apply_error ~loc env (app_name, mty_f, args) =
   let footnote = Printtyp.Conflicts.err_msg in
   let d = Functor_suberror.App.patch env ~f:mty_f ~args in
   match d with
   (* We specialize the one change and one argument case to remove the
      presentation of the functor arguments *)
-  | [ _,  Change (_, _, Err.Incompatible_params (i,_)) ] ->
-      Location.errorf ~loc ~footnote "%t" (Functor_suberror.App.incompatible i)
+  | [ _,  Change (_, _, Err.Incompatible_params (_i,p)) ] ->
+      Location.errorf ~loc ~footnote "%t" (Functor_suberror.App.incompatible p)
   | [ _, Change (g, e,  Err.Mismatch mty_diff) ] ->
       let more () =
         subcase_list @@
@@ -1029,6 +1030,10 @@ let register () =
       | Includemod.Apply_error {loc; env; app_name; mty_f; args} ->
           Some (Printtyp.wrap_printing_env env ~error:true (fun () ->
               report_apply_error ~loc env (app_name, mty_f, args))
+            )
+      | Includemod.Type_expected_param {loc; env; path; arity} ->
+          Some (Printtyp.wrap_printing_env env ~error:true (fun () ->
+              report_type_expected_error ~loc arity path)
             )
       | _ -> None
     )
